# mindroot

./: '  .dockerignore  .env.example  .env.tui.example  .gitignore  :q  CANCELLATION_IMPLEMENTATION.md  CREDENTIALS.md  Dockerfile  EMAIL_SETUP_GUIDE.md  GMAIL_CUSTOM_DOMAIN_SETUP.md  L8N_INTEGRATION_GUIDE.md  MANIFEST.in  MANIFEST.in.bak  MCP_INSTALLATION_FIX_SUMMARY.md  NETWORK_OPTIMIZATION_README.md  PLUGIN_ROUTER_FIX_SUMMARY.md  README.docker.md  README.md  TUI_GUIDE.md  XML_STREAMING_HANDOFF.md  XML_STREAM_HANDOFF.md  agent.py  agent_router.py  agents.md  ahp.py.bak  api.md  bu_agent.py  chatlog.py  chatlog_optimization_patch.py  check-optimization-status.sh  checklistsample.md  claude.py  config.json  cows.ansi  diagnose-vps-environment.sh  docker-compose.yml  entrypoint.sh  escape_markdown_blocks.py  example_plugin_manifest.json  (+67 more)
AlexBOV/: persona.json
Clara/: persona.json
Tom/: persona.json
ah/: .gitignore  ah_bov  chatcontext.py  chatlog.py  check_args.py  command_parser.py  commands.py  cre_bov  cre_bov_docs  cre_home  cre_login  cre_valuation  log_router.py  logfiles.py  model_selector.py  organize_models.py  pipe.py  pipelines.py  plugins.py  plugins_install.py  preferences.py  providers.py  registry.py  route_decorators.py  services.py
ah/ah_add_timestamp/: mod.py
ah/ah_agent/: agent.py  buagentx.py  command_parser.py  system.j2
ah/ah_anthropic/: bumod.py  mod.py  test_stream_chat.py
ah/ah_chat/: chat.py  commands.py  router.py  router_say_return.py  services.py
ah/ah_concise_results/: mod.py
ah/ah_download_link/: mod.py  router.py
ah/ah_excel/: __init__.py  analyze_excel.py  example.xlsx  excel_recalculator.py  info_box_detection.py  mod.py  output_data.py  (+6 more)
docs/: .env  .gitignore  anthropic_translate.py  conf.py  configuration.rst  deployment.rst  generate_pot_files.py  getting_started.rst  index.rst  plugin_system.rst  rag_and_knowledgebases.rst  registry_system.rst  translate_docs.sh
docs_old_outline/: agents_and_personas.rst  core_concepts.rst  htmx_info.txt  index.rst  services_and_providers.rst  translate_docs.py  troubleshooting.rst  ui_customization.rst
frontend/: chat.html  chat.py  htmx2.txt  neon.css  package-lock.json  package.json
indices/: dev.json
lib/: apply-optimizations.sh  chatcontext.py  detect-capabilities.sh  ex1.txt  ex2.txt  ex3.txt  generate-config.sh  json_str_block.py  new_plugins.py  plugins.py  plugins_new.py  plugins_old.py  route_decorators.py  templates.py  test_case_2.json  test_case_3.json
local/: .gitignore
mindroot-11.20.0/: LICENSE  MANIFEST.in  pyproject.toml
plugins/: commands.py  my_new_service_plugin.py  my_service_plugin.py  plugins.py  providers.py  registry.py  services.py  test1.py
registry/: .gitignore  data_access.py  main.py
registry_website/: .gitignore  README.md  ahp.db  asset_manager.py  authentication.py  database.py  email_sender.py  home.py  main.py  main_backup.py  mindroot_registry.db  rebuild_index.py  requirements.txt  start_registry.py  vector_store.py
routers/: __init__.py  agent_router.py  persona_router.py  plugin_router.py  settings_router.py
src/ah/coreplugins/persona/: mod.py  plugin_info.json  pyproject.toml
src/mindroot/coreplugins/mcp_/: README.md  __init__.py  auth.md  catalog_commands.py  catalog_manager.py  dynamic_commands.py  enhanced_mod.py  mcp_manager.py  mod.py  oauth_storage.py  plugin_info.json  pyproject.toml  router.py  server_installer.py  setup.py  test_dynamic_commands.py  testmcpclient.py
src/mindroot/coreplugins/mcp_/data/mcp/: default_mcp_servers.json  servers.json
src/mindroot/coreplugins/mcp_/inject/: admin.jinja2
src/mindroot/coreplugins/mcp_/static/js/: mcp-catalog-browser.js  mcp-server-manager.js
src/mindroot/coreplugins/mcp_/templates/: mcp_admin.jinja2  mcp_catalog.jinja2
static/: .gitignore  admin.html  base.js  buchat.html  chat.html  chat.js  chat_lit.html  chatform.js  chatmessage.js  design.html  main.css  neon.css  web_components_chat.html
(+1250 files in other folders)
