[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindroot"
version = "8.12.0"
description = "MindRoot AI Agent Framework"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "aiofiles",
    "nanoid",
    "termcolor",
    "colored",
    "loguru",
    "pytz",
    "PyJWT",
    "pluggy",
    "sse_starlette",
    "partial-json-parser",
    "pydantic",
    "setuptools",
    "requests",
    "aiohttp",
    "Pillow",
    "psutil",
    "aiosmtplib",
    "pydantic[email]",
    "bcrypt",
    "rich",
    "colorama",
    "python-dotenv",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2"
]

[project.scripts]
mindroot = "mindroot.server:main"
